MY DEV ORG/src/objects/EmailMadness__c.object
<CustomObject>
    <fields>
        <fullName>cc1__c</fullName>
        <label>cc1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>cc2__c</fullName>
        <label>cc2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>cc4__c</fullName>
        <label>cc4</label>
        <type>Email</type>
    </fields>
    <label>EmailMadness</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EM-{00000}</displayFormat>
        <label>EmailMadness Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EmailMadnesses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>